# Reasoning-Manifold

./: .gitignore  README.md  pyproject.toml
scripts/: compute_layerwise_metrics.py  merge_layer_metrics.py
src/: utils.py
src/core/: __init__.py  data.py  metrics.py
src/inference/: decoding.py  extract.py  models.py  prompts.py
src/pipelines/: _aggregate.py  _worker.py  layer_metrics.py  layerwise.py  merge_metrics.py  run.py
src/reasoning_manifolds/: __init__.py  data.py  extract.py  metrics.py  models.py  prompts.py  utils.py
src/reasoning_manifolds/pipeline/: __init__.py  aggregator.py  launcher.py  layerwise.py  worker.py
